# goodwiki

./: .editorconfig  .gitignore  LICENSE  PYPI_README.md  README.md  pyproject.toml  setup.cfg
notebooks/: client_testing.ipynb  out_dataset_analysis.ipynb  raw_data_analysis.ipynb
scripts/: download.py  generate.py  get_wikitext.py
src/: __init__.py  client.py  download.py  generate.py  mwp_utils.py  tags.py  utils.py
src/goodwiki/: __init__.py  client.py  constants.py  errors.py  mwp_utils.py  tags.py  utils.py
tests/: generate_snapshots.py  test_client_e2e_snapshots.py
tests/snapshots/e2e/2009_nba_all-star_game/: markdown.md  props.json  raw.txt  wikitext.txt
tests/snapshots/e2e/adenanthos_cuneatus/: markdown.md  props.json  raw.txt  wikitext.txt
tests/snapshots/e2e/azerbaijan/: markdown.md  props.json  raw.txt  wikitext.txt
tests/snapshots/e2e/bengal_famine_of_1943/: markdown.md  props.json  raw.txt  wikitext.txt
tests/snapshots/e2e/beryl_may_dent/: markdown.md  props.json  raw.txt  wikitext.txt
tests/snapshots/e2e/binary_search_algorithm/: markdown.md  props.json  raw.txt  wikitext.txt
tests/snapshots/e2e/byzantine_civil_war_of_1341–1347/: markdown.md  props.json  raw.txt  wikitext.txt
tests/snapshots/e2e/doctor_who_(series_12)/: markdown.md  props.json  raw.txt  wikitext.txt
tests/snapshots/e2e/elvis_presley/: markdown.md  props.json  raw.txt  wikitext.txt
tests/snapshots/e2e/ender's_game/: markdown.md  props.json  raw.txt  wikitext.txt
tests/snapshots/e2e/hannah_arendt/: markdown.md  props.json  raw.txt  wikitext.txt
(+84 files in other folders)
